# OpenStory

./: .gitignore  CMakeLists.ios.cmake  CMakeLists.txt  CONTRACT.md  README.md  debug_output.txt  ios.toolchain.cmake  lcdump.txt  npcspeak.txt  nx_quest_dump.txt  nx_ui_dump.txt  skeleton.txt  statdbg.txt
.github/workflows/: build.yml  ios-build.yml
launcher/: .gitignore  App.xaml  App.xaml.cs  AugurLauncher.csproj  ClientSettings.cs  Converters.cs  DashboardActivity.cs  FeedEntry.cs  LauncherConfig.cs  MainWindow.xaml  MainWindow.xaml.cs  Manifest.cs  News.cs  README.md  SelectionStore.cs  SelfUpdater.cs  ServerProbe.cs  Updater.cs  app.manifest  config.ini  makeicon.py
platform/ios/: AppDelegate.h  AppDelegate.mm  AudioIOS.mm  EntryPoint.mm  FontPathIOS.mm  GameViewController.h  GameViewController.mm  GraphicsGLES.cpp  HardwareInfoIOS.h  Info.plist  LaunchScreen.storyboard  NxPathIOS.mm  ScreenResolutionIOS.h  TouchInput.h  TouchInput.mm  VirtualControls.h  VirtualControls.mm  WindowIOS.h  WindowIOS.mm
platform/shared/: GLCompat.h  KeyCodes.h  PlatformConfig.h
resource/: OpenStory.rc
resources/nx/: Base.nx  Character.nx  Effect.nx  Etc.nx  Item.nx  Map.nx  Mob.nx  Morph.nx  Npc.nx  Quest.nx  Reactor.nx  Skill.nx  Sound.nx  String.nx  TamingMob.nx  UI.nx  UI159.nx  UI_83.nx
src/: Configuration.cpp  Configuration.h  Constants.h  MapleStory.cpp
src/Audio/: Audio.cpp  Audio.h
src/Character/: AccountCharStore.cpp  AccountCharStore.h  BuddyList.cpp  BuddyList.h  BuddyMemoStore.cpp  BuddyMemoStore.h  Buff.cpp  Char.cpp  Char.h  CharEffect.cpp  CharEffect.h  CharStats.cpp  CharStats.h  EquipStat.cpp  Job.cpp  MapleStat.cpp  MonsterBook.cpp  MonsterBook.h  OtherChar.cpp  OtherChar.h  Party.cpp  Party.h  PassiveBuffs.cpp  Player.cpp  Player.h  QuestLog.cpp  QuestLog.h  SkillBook.cpp  SkillBook.h  SkillId.h  StatCaps.h
src/Character/Inventory/: Inventory.cpp  InventoryType.cpp  Weapon.cpp
src/Character/Look/: Afterimage.cpp  AiSkin.cpp  AiSkin.h  Body.cpp  BodyDrawInfo.cpp  BodyDrawInfo.h  CharEquips.cpp  CharEquips.h  CharLook.cpp  CharLook.h  Clothing.cpp  Clothing.h  EquipSlot.cpp  EquipSlot.h  Face.cpp  Hair.cpp  Hair.h  PetLook.cpp  PetLook.h  ProceduralHat.cpp  ProceduralHat.h  ProceduralWeapon.cpp  ProceduralWeapon.h  Stance.cpp
src/Data/: EquipData.cpp  ItemData.cpp  JobData.cpp  JobData.h  MapData.cpp  MapData.h  MobData.cpp  MobData.h  NpcData.cpp  NpcData.h  PetData.cpp  PetData.h  QuestData.cpp  QuestData.h  ReactorData.cpp  ReactorData.h  SkillData.cpp  StringData.cpp  StringData.h  WeaponData.cpp
src/Gameplay/: Camera.cpp  HiredMerchants.cpp  HiredMerchants.h  MapleTVBroadcast.cpp  MapleTVBroadcast.h  MiniRooms.h  Spawn.cpp  Spawn.h  Stage.cpp  Stage.h
src/Gameplay/Combat/: Combat.cpp  Combat.h  DamageNumber.cpp  DamageNumber.h  Skill.cpp  SkillAction.cpp  SkillSound.cpp  SkillSound.h
src/Gameplay/MapleMap/: Door.cpp  Door.h  Dragon.cpp  Dragon.h  Drop.h  ItemDrop.cpp  ItemDrop.h  MapBackgrounds.cpp  MapBackgrounds.h  MapChars.cpp  MapChars.h  MapDoors.cpp  MapDoors.h  MapDragons.cpp  MapDragons.h  MapDrops.cpp  MapDrops.h  MapEffect.cpp  MapEnvironments.cpp  MapEnvironments.h  MapInfo.cpp  MapMists.cpp  MapMists.h  MapMobs.cpp  MapMobs.h  MapNpcs.cpp  MapNpcs.h  MapObjects.cpp  MapPortals.cpp  MapSummons.cpp  MapSummons.h  MapTilesObjs.cpp  MapWeather.cpp  MapWeather.h  MesoDrop.cpp  MesoDrop.h  Mist.cpp  Mist.h  Mob.cpp  Mob.h  (+6 more)
src/Gameplay/Physics/: FootholdTree.cpp  Physics.cpp  PhysicsObject.h
src/Graphics/: Animation.cpp  Animation.h  CharacterAura.cpp  CharacterAura.h  Color.h  EffectLayer.cpp  GraphicsGL.cpp  GraphicsGL.h  Text.cpp  Text.h  Texture.cpp  Texture.h
src/IO/: Gamepad.cpp  Gamepad.h  KeyAction.h  Keyboard.cpp  Keyboard.h  NotificationCenter.cpp  NotificationCenter.h  Notifications.cpp  Notifications.h  UI.cpp  UI.h  UIDragElement.h  UIElement.cpp  UIElement.h  UIScale.h  UIState.h  UIStateCashShop.cpp  UIStateCashShop.h  UIStateGame.cpp  UIStateGame.h  UIStateLogin.cpp  UIStateLogin.h  Window.cpp  Window.h
src/IO/Components/: Button.h  ChatBalloon.cpp  ChatBalloon.h  EmotionPanel.cpp  EmotionPanel.h  EquipTooltip.cpp  Gauge.cpp  Gauge.h  Icon.cpp  Icon.h  ItemTooltip.cpp  MapleButton.cpp  MapleButton.h  MapleComboBox.cpp  MobGage.cpp  MobGage.h  NotificationRow.cpp  NotificationRow.h  PopupSettingsChrome.cpp  PopupSettingsChrome.h  ScrollingNotice.cpp  SideMenuBackdrop.cpp  SideMenuBackdrop.h  SkillTooltip.cpp  Slider.cpp  Textfield.cpp  Textfield.h  Tooltip.h  TwoSpriteButton.cpp  UIResources.cpp  UIResources.h
src/IO/UITypes/: UIAddBuddy.cpp  UIAddBuddy.h  UIAlliance.cpp  UIAlliance.h  UIAranCreation.cpp  UIAranCreation.h  UIAvatarBanner.cpp  UIAvatarBanner.h  UIAvatarMegaphone.cpp  UIAvatarMegaphone.h  UIBuddyContextMenu.cpp  UIBuddyContextMenu.h  UIBuddyGroup.cpp  UIBuddyGroup.h  UIBuddyList.cpp  UIBuddyList.h  UIBuddyNickname.cpp  UIBuddyNickname.h  UIBuffList.cpp  UIBuffList.h  UICashShop.cpp  UICashShop.h  UIChannel.cpp  UIChannel.h  UICharInfo.cpp  UICharInfo.h  UICharSelect.cpp  UICharSelect.h  UIChat.cpp  UIChatBar.cpp  UIChatBar.h  UIChatWindow.cpp  UIChatWindow.h  UIClock.cpp  UIClock.h  UIComboCounter.cpp  UIComboCounter.h  UICygnusCreation.cpp  UICygnusCreation.h  UIEquipInventory.cpp  (+131 more)
src/Net/: ChannelLoadData.cpp  ChannelLoadData.h  NetConstants.h  NpcResponseTracker.cpp  NpcResponseTracker.h  OutPacket.cpp  OutPacket.h  PacketSwitch.cpp  Session.cpp  SocketAsio.cpp  SocketAsio.h  SocketWinsock.cpp
src/Net/Handlers/: AttackHandlers.cpp  BotInventoryHandlers.cpp  BotInventoryHandlers.h  CashShopHandlers.cpp  CashShopHandlers.h  ClockHandlers.cpp  ClockHandlers.h  EventHandlers.cpp  EventHandlers.h  FieldHandlers.cpp  FieldHandlers.h  ForeignCharHandlers.cpp  ForeignCharHandlers.h  InventoryHandlers.cpp  InventoryHandlers.h  LoginHandlers.cpp  LoginHandlers.h  MTSHandlers.cpp  MTSHandlers.h  (+24 more)
src/Util/: CrashLog.cpp  CrashLog.h  CustomEquipExport.cpp  CustomEquipExport.h  Misc.cpp  Misc.h  NxFiles.cpp  WzFiles.h
tools/nx/: extract_all_ws.py  graft_title.py  nx_repack.py  nxbmp.py  nxls.py  wz.py
(+21 files in other folders)
